--- a/waybar/style.css
+++ b/waybar/style.css
@@ -10,40 +10,40 @@
  * Keyframes
  * -------------------------------------------------------------------------- */
 
-@define-color polar-dark  #4c566a;
+@define-color polar-dark 	 #4c566a;
 
-@define-color snow-white  #eceff4;
-@define-color snow-grey  #d8dee9;
+@define-color snow-white	 #eceff4;
+@define-color snow-grey 	 #d8dee9;
 
-@define-color frost-green  #8fbcbb;
-@define-color frost-light-blue  #88c0d0;
-@define-color frost-dark-blue #5e81ac;
+@define-color frost-green 	 #8fbcbb;
+@define-color frost-light-blue 	 #88c0d0;
+@define-color frost-dark-blue	 #5e81ac;
 
-@define-color aurora-red #bf616a;
-@define-color aurora-orange #d08770;
-@define-color aurora-yellow #ebcb8b;
-@define-color aurora-green #a3be8c;
-
+@define-color aurora-red	 #bf616a;
+@define-color aurora-orange	 #d08770;
+@define-color aurora-yellow	 #ebcb8b;
+@define-color aurora-green	 #a3be8c;
+@define-color aurora-purple 	 #b48ead;
 
 @keyframes blink-warning {
     70% {
-        color: white;
+        color: @snow-white;
     }
 
     to {
-        color: white;
-        background-color: #EBCB8B;
+        color: @snow-white;
+        background-color: @aurora-yellow;
     }
 }
 
 @keyframes blink-critical {
     70% {
-      color: #D8DEE9;
-    }
+      color: @aurora-orange;
+}
 
     to {
-        color: white;
-        background-color: #D08770;
+        color: @snow-white;
+        background-color: @aurora-red;
     }
 }
 
@@ -63,7 +63,7 @@
 
 /* The whole bar */
 #waybar {
-    background: @frost-dark-blue;
+    background: @polar-dark;
     color: @snow-white;
     font-family: Cantarell, Noto Sans, sans-serif;
     font-size: 13px;
@@ -96,15 +96,15 @@
 }
 
 #battery.normal {
-    color: #A3BE8C;
+    color: @aurora-green;
 }
 
 #battery.warning {
-    color: #EBCB8B;
+    color: @aurora-yellow;
 }
 
 #battery.critical {
-    color: #BF616A;
+    color: @aurora-red;
 }
 
 #battery.warning.discharging {
@@ -118,19 +118,20 @@
 }
 
 #clock {
+    color: @snow-white;
     font-weight: bold;
 }
 
-#cpu {
-  /* No styles */
+#cpu.normal {
+    color: @aurora-green;
 }
 
 #cpu.warning {
-    color: #D08770;
+    color: @aurora-yellow;
 }
 
 #cpu.critical {
-    color: #BF616A;
+    color: @aurora-red;
 }
 
 #memory {
@@ -139,33 +140,54 @@
     animation-direction: alternate;
 }
 
+#memory.normal {
+    color: @aurora-green;
+}
+
 #memory.warning {
-    color: #D08770;
+    color: @aurora-red;
 }
 
 #memory.critical {
-    color: #BF616A;
+    color: @aurora-red;
     animation-name: blink-critical;
     animation-duration: 2s;
 }
 
 #mode {
     background: #64727D;
-    border-top: 2px solid white;
+    border-top: 2px solid @snow-white;
     /* To compensate for the top border and still have vertical centering */
     padding-bottom: 2px;
 }
 
-#network {
-    /* No styles */
+#network.normal {
+    color: @aurora-green;
+}
+
+#network.warning {
+    color: @aurora-yellow;
+}
+
+#network.critical {
+    color: @aurora-red;
 }
 
 #network.disconnected {
-    color: #D08770;
+    color: @aurora-red;
 }
 
-#pulseaudio {
-    /* No styles */
+#pulseaudio.low {
+    color: @aurora-green;
+}
+#pulseaudio.low-medium {
+    color: @aurora-yellow;
+}
+#pulseaudio.medium {
+    color: @aurora-orange;
+}
+#pulseaudio.high {
+    color: @aurora-red;
 }
 
 #pulseaudio.muted {
@@ -176,12 +198,16 @@
     color: rgb(102, 220, 105);
 }
 
-#temperature {
-    /* No styles */
+#temperature.cool {
+    color: @frost-dark-blue;
+}
+#temperature.low {
+    color: @aurora-green;
 }
 
 #temperature.critical {
-    color: #BF616A;
+    animation-name: blink-critical;
+    animation-duration: 2s;
 }
 
 #tray {
@@ -203,7 +229,7 @@
 
 #workspaces button.focused {
     border-color: #4c7899;
-    color: white;
+    color: @snow-white;
     background-color: #88c0d0;
 }
 
